<resources>
    <string name="app_name">buddycloud</string>
    <string name="app_name_uppercase">Buddycloud</string>
	<string name="app_id">246626368832474</string>
	<string name="buddycloud_website">http://buddycloud.com/</string>
    <string name="yes">Yes</string>
    <string name="yes_and_remember">Yes (Remember this choice)</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_message">A demo app built on the Buddycloud messaging stack.</string>
    <string name="menu_search">Search</string>
    <string name="menu_create_channel">Create channel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_find_nearby">Nearby channels</string>
    <string name="menu_find_active">Active channels</string>
    <string name="menu_find_recommended">Recommended channels</string>
    <string name="menu_find_friends">Find friends</string>
    <string name="menu_post_send">Post send</string>
    <string name="menu_follow">Follow</string>
    <string name="menu_unfollow">Unfollow</string>
    <string name="menu_channel_details">Channel details</string>
    <string name="menu_channel_followers">Followers</string>
    <string name="menu_channel_banned">Banned</string>
    <string name="menu_similar_channels">Similar channels</string>
    <string name="menu_delete_channel">Delete channel</string>
    <string name="menu_role_moderator">Change to moderator</string>
    <string name="menu_role_member">Change to follower (can\'t post)</string>
    <string name="menu_role_publisher">Change to follower+post</string>
    <string name="menu_role_outcast">Ban</string>
    <string name="apiAddressTxtHint">https://api.buddycloud.org</string>
	<string name="action_followed">You\'re now following %1$s</string>
	<string name="action_unfollowed">You unfollowed %1$s</string>
	<string name="action_follow_failed">Couldn\'t change your role in %1$s</string>
	<string name="message_post_created">New post has been created.</string>
	<string name="message_post_creation_failed">Houston, we\'ve some problem. Your new post is not created, please try again.</string>
	<string name="message_reply_created">Comment has been posted successfully.</string>
	<string name="message_reply_creation_failed">Houston, we\'ve some problem. Your comment is failed, please try again.</string>
	<string name="title_confirm_delete">Confirm deletion</string>
	<string name="message_confirm_delete">Are you sure you want to delete this post?</string>
	<string name="message_post_topic_deleted">Post deleted</string>
	<string name="message_post_topic_delete_failed">Could not delete post</string>
	<string name="message_post_comment_deleted">Comment deleted</string>
	<string name="message_post_comment_delete_failed">Could not delete comment</string>
	<string name="message_post_fetch_failed">Could not retrieve posts from the server</string>
	<string name="title_topic_channel_create">Create new topic channel</string>
	<string name="message_topic_channel_manadatory">Sorry, but your topic channel name can\'t be empty.</string>
    <string name="message_topic_channel_invalid">Invalid topic channel name. Pick channel name without domain and spaces.</string>
	<string name="message_topic_channel_create">Topic channel created</string>
	<string name="message_topic_channel_creation_failed">Could not create topic channel</string>
	<string name="message_avatar_upload_failed">Failed to load new avatar file</string>
	<string name="message_avatar_uploading">Uploading avatar</string>
	<string name="message_avatar_uploaded">Upload successful</string>
	<string name="message_metadata_saving">Channel metadata updating&#8230;</string>
	<string name="message_metadata_updated">Channel metadata updated</string>
	<string name="message_metadata_update_failed">Could not update channel metadata</string>
	<string name="message_account_fields_mandatory">All fields are mandatory</string>
	<string name="message_account_username_mandatory">Sorry, but your username can\'t be empty.</string>
	<string name="message_account_username_invalid1">Pick username without domain and spaces.</string>
	<string name="message_account_username_invalid2">Invalid username. Only characters and numbers are allowed.</string>
	<string name="message_account_email_invalid">Invalid email address.</string>
	<string name="message_account_password_mandatory">Sorry, but your password can\'t be empty.</string>
	<string name="message_account_password_short_length">Password should be atleast 6 characters.</string>
	<string name="message_account_invalid_domain">Domain name is not valid</string>
	<string name="message_api_discovery_failed">Could not find an API for this domain</string>
	<string name="message_reseting_password">Reseting password&#8230;</string>
	<string name="message_logging_in">Logging in&#8230;</string>
	<string name="message_account_creation">Creating account&#8230;</string>
	<string name="message_account_creation_failed">Could not register account. Username not available.</string>
	<string name="message_post_comment_mandatory">Comment can\'t be empty.</string>
	<string name="message_post_topic_mandatory">Post can\'t be empty.</string>
	<string name="message_post_topic_channelJid_mandatory">Channel can\'t be empty. Please select the channel.</string>
	<string name="message_post_topic_attachment_in_progress">Media attachment is in progress.</string>
	<string name="message_post_creation">Posting&#8230;</string>
	<string name="message_replies_load_failed">Could not fetch replies of this post</string>
	<string name="message_followers_load_failed">Could not fetch followers of this channel</string>
	<string name="message_followers_not_found">Not found any followers of this channel</string>
	<string name="message_most_active_load_failed">Could not fetch most active channels</string>
	<string name="message_most_active_not_found">Not found any most active channels</string>
	<string name="message_recommended_load_failed">Could not fetch recommended channels</string>
	<string name="message_recommended_not_found">Not found any recommended channels</string>
	<string name="message_similar_load_failed">Could not fetch similar channels</string>
	<string name="message_similar_not_found">Not found any similar channels</string>
	<string name="message_search_failed">Could not contact server to search for channels</string>
	<string name="message_search_not_found">Not results</string>
	<string name="message_fetch_subscribed_failed">Could not fetch list of subscribed</string>
	<string name="message_sync_failed">Could not synchronize unread counters</string>
	<string name="message_post_details_load_failed">Could not fetch post details</string>
	<string name="message_no_network_connection">Not connected with internet. Please try again.</string>
	<string name="message_no_topics_found">No topics found. Why not create a new topic?</string>
	<string name="message_notifications_settings_load_failed">Could not load notification settings</string>
	<string name="message_media_upload_failed">Error during media upload</string>
	<string name="message_media_uploading">Uploading media</string>
	<string name="message_media_uploaded">Media uploaded</string>
	<string name="message_affiliation_change_success">Affiliations were successfully changed</string>
	<string name="message_affiliation_change_failed">Could not change affiliations</string>
	<string name="post_button">Post</string>
	<string name="channel_details_title">Title</string>
	<string name="channel_details_title_hint">title</string>
	<string name="channel_details_description">Description</string>
	<string name="channel_details_description_hint">description</string>
	<string name="channel_details_access_model">Channel Privacy</string>
	<string name="channel_details_access_model_hint">channel privacy</string>
	<string name="channel_details_creation_date">Creation date</string>
	<string name="channel_details_creation_date_hint">creation date</string>
	<string name="channel_details_channel_type">Channel type</string>
	<string name="channel_details_channel_type_hint">channel type</string>
	<string name="channel_details_default_affiliation">Default affiliation</string>
	<string name="channel_details_default_affiliation_hint">default affiliation</string>
	<string name="channel_details_save">Save settings</string>
	<string name="channel_details_role_member">member (only view channel)</string>
	<string name="channel_details_role_publisher">publisher (follower+post)</string>
	<string name="channel_details_access_model_member">member only</string>
	<string name="channel_details_access_model_open">open</string>
	<string name="create_account_title">Sign up</string>
	<string name="create_account_channel_name">Username</string>
	<string name="create_account_channel_name_hint">pick a username</string>
	<string name="create_account_password">Password</string>
	<string name="create_account_password_hint">at least 6 characters</string>
	<string name="create_account_email_address">Email</string>
	<string name="create_account_email_address_hint">username@example.com</string>
	<string name="create_account_button">Join buddycloud</string>
	<string name="create_account_footer_caption">This will sign you up to the demo Buddycloud service.\n\nTo run your own Buddycloud site, or build in-app messaging using Buddycloud, check out the instructions on buddycloud.com.</string>
	<string name="login_title">Log in</string>
	<string name="login_username">Username</string>
	<string name="login_hint">username@example.com</string>
	<string name="login_password">Password</string>
	<string name="login_password_hint">password</string>
    <string name="login_button">Log In</string>
    <string name="login_create_account_button">Create new account</string>
    <string name="login_error_wrong_credentials">The username and password you entered did not match our records. Please double-check and try again.</string>
	<string name="login_error_bad_channel_format">Username you entered not defined with proper format \'username@example.com\'.</string>
	<string name="forgot_password_title">Forgot Password</string>
	<string name="forgot_password_username">Username</string>
	<string name="forgot_password_username_hint">username to recover password</string>
	<string name="forgot_password_error_no_username_found">The username you entered did not match our records. Please double-check and try again.</string>
    <string name="forgot_password_error_bad_username_format">Username you entered not defined with proper format \'username@example.com\'.</string>
    <string name="forgot_password_hint">Please provide the \'username@example.com\' and new password will be send to the email address provided during registration.</string>
	<string name="forgot_password_button">Recover Password</string>
	<string name="ssl_error_title">SSL error</string>
	<string name="ssl_error_message">Insecure connection or invalid certificate. Trust %1$s?</string>
	<string name="search_title">Search</string>
	<string name="signup_button">Sign Up</string>
	<string name="topic_channel">Enter the channel name:</string>
	<string name="topic_channel_hint">channel name</string>
	<string name="topic_channel_domain_hint">\@%1$s</string>
	<string name="menu_pending_subscriptions">Pending subscriptions</string>
	<string name="caption_forgot_password">Forgot password?</string>
	<string name="about_buddycloud_protocol_title">Buddycloud for Android</string>
	<string name="about_buddycloud_protocol_content">Buddycloud is a new way to build communication tools. The buddycloud protocol enables communication, file sharing and chat, using open standards and is secure.\n\nBuddycloud for Android is built using open source software licenses.</string>
    <string name="about_buddycloud_contributors_title">Contributors</string>
    <string name="about_buddycloud_version_title">Version</string>
</resources>