<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_follow"
        android:title="@string/menu_follow"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_channel_details"
        android:title="@string/menu_channel_details"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_channel_followers"
        android:title="@string/menu_channel_followers"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_similar_channels"
        android:title="@string/menu_similar_channels"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_pending_subscriptions"
        android:title="@string/menu_pending_subscriptions"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_delete_channel"
        android:title="@string/menu_delete_channel"
        android:showAsAction="never" />
    
</menu>
