<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="0dp"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:src="@drawable/logo_about" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_buddycloud_protocol_title"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#CCCCCC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/about_buddycloud_protocol_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_buddycloud_contributors_title"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#CCCCCC" />
    
    <LinearLayout
        android:id="@+id/contributorsFrame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/about_buddycloud_version_title"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#CCCCCC" />
    
    <TextView
        android:id="@+id/versionTxt"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
