<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:buddycloud="http://schemas.android.com/apk/res-auto"
    xmlns:tooltipErrorView="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:fillViewport="true"
    android:isScrollContainer="true" >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <com.buddycloud.customviews.TypefacedTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/forgot_password_username"
            android:textColor="@color/bc_dark_grey_color"
            android:textSize="@dimen/forgot_passwd_screen_label_txt_size"
            buddycloud:typeface="Roboto-Regular.ttf" />

        <com.buddycloud.customviews.TypefacedEditText
            android:id="@+id/usernameTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="15"
            android:hint="@string/forgot_password_username_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/bc_dark_grey_color"
            android:textSize="@dimen/forgot_passwd_screen_editbox_txt_size"
            buddycloud:typeface="Roboto-Regular.ttf" >

            <requestFocus />
        </com.buddycloud.customviews.TypefacedEditText>

        <com.buddycloud.customviews.TooltipErrorView
            android:id="@+id/usernameErrorTooltip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone"
            tooltipErrorView:bgColor="#f6f6f6"
            tooltipErrorView:borderColor="#d5d5d5"
            tooltipErrorView:fontTypeface="Roboto-Light.ttf"
            tooltipErrorView:textColor="#768595" />

        <com.buddycloud.customviews.TypefacedButton
            android:id="@+id/forgotPasswordBtn"
            style="@style/btnStyleGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:text="@string/forgot_password_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/forgot_passwd_screen_btn_txt_size"
            buddycloud:typeface="Roboto-Regular.ttf" />

       <com.buddycloud.customviews.TypefacedTextView
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:text="@string/forgot_password_hint"
           android:textColor="@color/bc_grey_shade_color"
           android:textSize="@dimen/forgot_passwd_screen_hint_size"
           buddycloud:typeface="Roboto-Regular.ttf" />

   </LinearLayout>

</ScrollView>