<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:buddycloud="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bc_green_blue_color"
    tools:context=".WelcomeActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/welcome_screen_box_margin"
        android:stretchColumns="1,2" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp" >

            <ImageView
                android:id="@+id/logoSquare"
                android:layout_width="@dimen/welcome_screen_logo_wh"
                android:layout_height="@dimen/welcome_screen_logo_wh"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/bc_icon_white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp" >

            <com.buddycloud.customviews.TypefacedTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/welcome_message"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/welcome_msg_txt_size"
                buddycloud:typeface="Roboto-Light.ttf" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

           <com.buddycloud.customviews.TypefacedButton
                    android:id="@+id/signupBtn"
                    style="@style/btnStyleDarkGrey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/signup_button"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/welcome_screen_btn_txt_size"
                    buddycloud:typeface="Roboto-Regular.ttf" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

           <com.buddycloud.customviews.TypefacedButton
                    android:id="@+id/loginBtn"
                    style="@style/btnStyleGrey"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/login_button"
                    android:textColor="@color/bc_dark_green"
                    android:textSize="@dimen/welcome_screen_btn_txt_size"
                    buddycloud:typeface="Roboto-Regular.ttf" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>